--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
+
   <body>
 
+    	<div class="header">
+
+
+      </div>
+
+      <div class="body">
+
+
+      </div>
+
+      <div class="footer">
+
+
+      </div>
+
   </body>
+
 </html>
