--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
+    <head>
+        <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="css/indexstyle.css">
 
-  <body>
+        <meta charset="utf-8">
+        <title>Our Website | Motorbike</title>
+    </head>
 
-    	<div class="header">
+    <body style="background-image: url(img/background.jpg);
+    background-attachment:fixed;">
+
+        <div class="header">
+          <h1>Moped Tuning</h1>
+          <p>is not a crime</p>
+        </div>
+
+        <div class="topnav">
+          <a href="#">Home</a>
+          <a href="#">History</a>
+          <a href="#">Tuning</a>
+          <a href="#" style="float:right">Login</a>
+        </div>
 
 
-      </div>
 
-      <div class="body">
+            
 
-
-      </div>
-
-      <div class="footer">
+        <div class="footer">
+          <h2>Ride save :)</h2>
+        </div>
 
 
-      </div>
-
-  </body>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
+        <script src="imgstyle/js/index.js"></script>
+    </body>
 
 </html>
