--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
           <a href="#" style="float:right">Login</a>
         </div>
 
-
-
-
-
         <div class="footer">
           <h2>Ride save :)</h2>
         </div>
 
+        sdf
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
