--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
           <a href="#" style="float:right">Login</a>
         </div>
 
-
-
-
+      <article id="picture">
+        <p>
+            Hello  and  Welcome   to our  Website.
+        </p>
+        <img src="img/betarr50.jpg" alt="Motorcikle-Beta-rr-50" />
+      </article>
 
         <div class="footer">
           <h2>Ride save :)</h2>
