--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="header">
           <h1>Moped Tuning</h1>
-          <p>is not a crime</p>
+          <p>is (not) a crime</p>
         </div>
 
         <div class="topnav">
