--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-
-  <body>
-
-  </body>
-
-<html>
-
     <head>
         <link rel="stylesheet" href="css/indexstyle.css">
 
@@ -34,6 +22,44 @@
           <a href="#" style="float:right">Login</a>
         </div>
 
+        <table>
+          <tr>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Country</th>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>Germany</td>
+          </tr>
+          <tr>
+            <td>Centro comercial Moctezuma</td>
+            <td>Francisco Chang</td>
+            <td>Mexico</td>
+          </tr>
+          <tr>
+            <td>Ernst Handel</td>
+            <td>Roland Mendel</td>
+            <td>Austria</td>
+          </tr>
+          <tr>
+            <td>Island Trading</td>
+            <td>Helen Bennett</td>
+            <td>UK</td>
+          </tr>
+          <tr>
+            <td>Laughing Bacchus Winecellars</td>
+            <td>Yoshi Tannamuri</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Magazzini Alimentari Riuniti</td>
+            <td>Giovanni Rovelli</td>
+            <td>Italy</td>
+          </tr>
+        </table>
+
         <div class="footer">
           <h2>Ride save :)</h2>
         </div>
@@ -43,3 +69,4 @@
         <script src="imgstyle/js/index.js"></script>
     </body>
 </html>
+    D
