--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 
         <table>
           <tr>
+
+          </tr>
+
+          <tr>
+            <td><p>Beta RR 50</p></td>
             <th><img src="img/betarr50.jpg" alt="Motorcikle-Beta-rr-50" /></th>
-            <th colspan="3">Test</th>
 
           </tr>
           <tr>
