--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         </div>
 
       <article id="picture">
-        <p>
+        <h1>
             Hello  and  Welcome   to our  Website.
-        </p>
+        </h1>
         <img src="img/betarr50.jpg" alt="Motorcikle-Beta-rr-50" />
+        <p>
+          Beta-rr-50
+        </p>
       </article>
 
         <div class="footer">
