--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
         </h2>
 
         <table>
-          <tr>
-
-          </tr>
-
-          <tr>
-            <td><p>Beta RR 50</p></td>
-            <th><img src="img/betarr50.jpg" alt="Motorcikle-Beta-rr-50" /></th>
-
-          </tr>
-          <tr>
-            <td><p>Beta RR 50</p></td>
-          </tr>
+            <thead>
+                <tr><th colspan = “2”>Grade Table</th></tr>
+            </thead>
+            
+            <tbody>
+                <tr><td>Number of cylinders</td> <td>1</td></tr>
+                <tr><td>Clocking</td> <td>2-stroke</td></tr>
+                <tr><td>Cooling</td> <td>liquid</td></tr>
+                <tr><td>Cubic capacity</td> <td>50 ccm</td></tr>
+                <tr><td>power</td> <td>2.5 Ps</td></tr>
+                <tr><td>Torque</td> <td>3.2 Nm</td></tr>
+                <tr><td>Starter</td> <td>Kick</td></tr>
+                <tr><td>Drive</td> <td>Chain</td></tr>
+                <tr><td>Number of gears</td> <td>6</td></tr>
+            </tbody>
+          
         </table>
 
       </article>
