--- a/history.html
+++ b/history.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-
-<body>
-</body>
-
-<html>
-
+	
     <head>
-        <link rel="stylesheet" href="css/historystyle.css">
-        <link rel="stylesheet" href="css/indexstyle.css">
-
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/historystyle.css">
+		
         <meta charset="utf-8">
-        <title>Our Website | Motorbike</title>
+        <title>Motorbike</title>
     </head>
 
-    <body style="background-image: url(img/background.jpg);
-    background-attachment:fixed;">
+    <body>
 
-        <div class="header">
-          <h1>Moped Tuning</h1>
-          <p>is not a crime</p>
-        </div>
+        <article class="header clearfix">
+			<section id="logo-left">
+				<img src="img/info.jpg" alt="Logo">
+			</section>
+			
+			<section id="logo-right">
+				<img src="img/info.jpg" alt="Logo">
+			</section>
+			
+			<section id="titel">
+				<h2>Moped Tuning</h2>
+          		<p>is (not) a crime</p>
+			</section>
+			
+        </article>
 
-        <div class="topnav">
-          <a href="index.html">Home</a>
-          <a href="#">History</a>
-          <a href="tuning.html">Tuning</a>
-          <a href="#" style="float:right">Login</a>
-        </div>
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#">History</a></li>
+              <li><a href="#comming-tuning">Turning</a></li>
+              <li style="float:right"><a href="#login">Login</a></li>
+            </ul>
+       </nav>
 
-          <article id="text">
+		<article class="galarie">
+			<img src="img/history/moped1894.jpg" class="uneven">
+			<img src="img/history/moped1900.jpg" class="even">
+			<img src="img/history/puch.jpg" class="uneven">
+			<img src="img/history/simson.jpg" class="even">
+		</article>
+		
+          <article class="main">
             <section>
               
-                <h1>Motorcikle History</h1>
+                <h2>Motorcikle History</h2>
                 <p>
                   The first internal combustion, petroleum fueled motorcycle was the Daimler Reitwagen, it was designed
                   by the German inventor Gottlieb Daimeler and Wikhelm Maybach in Bad Cannstatt,in 1885.The early
@@ -98,15 +107,19 @@
 
           </article>
 
-
-
-
-        <div class="footer">
-          <h2>Ride save :)</h2>
-        </div>
-
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
-        <script src="imgstyle/js/index.js"></script>
+        <section class="footer">
+          	<h2>Ride save :)</h2>
+			<p>Copy © Right David/Fabian</p>
+        </section>
+		
+		<script type="text/javascript">
+			if (screen.width < 700)
+				window.location = "HandyError.html";
+		</script>
+		
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
     </body>
 </html>
