--- a/HandyError.html
+++ b/HandyError.html
@@ -1,1 +1,12 @@
-<h1>HANDY VERSION BALD VERFÜGBAR</h1>
+<!DOCTYPE html>
+<html lang="de">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="HandyError" content="width=device-width, initial-scale=1.0" />
+        <title>Comming</title>
+    </head>
+
+    <body>
+       <center><h1>Handy/Tablet Version ist bald verfügbar</h1></center>
+    </body>
+</html>
