--- a/history.html
+++ b/history.html
@@ -40,13 +40,16 @@
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/history/moped1894.jpg" alt="oldmoped">
+                        <img src="img/history/simson.jpg" alt="Apriliasx50">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/history/puch.jpg" alt="oldmoped">
+                        <img src="img/history/puch.jpg" alt="Betarr50">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/history/simson.jpg" alt="oldmoped">
+                        <img src="img/history/moped1894.jpg" alt="derbisender50">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/history/moped1900.jpg" alt="derbisender50">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -59,8 +62,8 @@
                 </a>
             </div>
         </section>
-
-        <article class="main">
+		
+          <article class="main">
             <section>
               
                 <h2>Motorcikle History</h2>
@@ -128,12 +131,7 @@
           	<h2>Ride save :)</h2>
 			<p>Copy © Right David/Fabian</p>
         </section>
-
-        <script type="text/javascript">
-            if (screen.width < 800)
-                window.location = "HandyError.html";
-        </script>
-
+		
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
