--- a/history.html
+++ b/history.html
@@ -13,12 +13,12 @@
 
         <article class="header clearfix">
 			<section id="logo-left">
-				<img src="img/info.jpg" alt="Logo">
-			</section>
-			
-			<section id="logo-right">
-				<img src="img/info.jpg" alt="Logo">
-			</section>
+                <img src="img/logol.jpg" alt="Logo">
+            </section>
+
+            <section id="logo-right">
+                <img src="img/logor.jpg" alt="Logo">
+            </section>
 			
 			<section id="titel">
 				<h2>Moped Tuning</h2>
