--- a/Tuning/index.html
+++ b/Tuning/index.html
@@ -167,15 +167,15 @@
 			Now what do you need ? Since you are now in the midrace segment, you can already make a list:
 			</p>
 			
-			<p>
-			-cylinder
-			-crankshaft, crankshaft bearing
-			-24 mm carburettor (more consumption but also more power)
-			-intake system (diaphragm block and intake socket where the carburettor is located)
-			-Exhaust (the sport exhaust is no longer sufficient)
-			-Internal rotor ignition if required
-			</p>
-			
+			<ul>
+				<li>cylinder</li>
+				<li>crankshaft, crankshaft bearing</li>
+				<li>24 mm carburettor (more consumption but also more power)</li>
+				<li>intake system (diaphragm block and intake socket where the carburettor is located)</li>
+				<li>Exhaust (the sport exhaust is no longer sufficient)</li>
+				<li>Internal rotor ignition if required</li>
+			</ul>
+		
 			<p>
 			An internal rotor ignition is on the one hand designed by the ignition unit for more power than the original ignition and on the other hand has a lower mass which has to be moved at the crankshaft. There are also differences. To adjust read this thread.
 			</p>
@@ -184,14 +184,14 @@
 			As a cylinder I will give you some examples with matching exhaust systems:
 			</p>
 			
-			<p>
-			Airsal Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...
-			Metrakit SP 70 ccm + Yasuni R2/R3 / SCR Racing Line...
-			Athena Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...
-			Airsal Racing 80 ccm + Turbokit Carrera 80...
-			Barikit Alu Racing 80 ccm + Turbokit Carrera 80...
-			Hebo Tomahawk 80 ccm + Turbokit Carrera 80...
-			</p>
+			<ul>
+				<li>Airsal Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+				<li>Metrakit SP 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+				<li>Athena Racing 70 ccm + Yasuni R2/R3 / SCR Racing Line...</li>
+				<li>Airsal Racing 80 ccm + Turbokit Carrera 80...</li>
+				<li>Barikit Alu Racing 80 ccm + Turbokit Carrera 80...</li>
+				<li>Hebo Tomahawk 80 ccm + Turbokit Carrera 80...</li>
+			</ul>
 			
 			<p>
 			please forget Malossi cylinder... the price is purchase disqualifying.
@@ -224,12 +224,12 @@
 			<h2>
 			Then you need:
 			</h2>
-			
-			<p>
-			-a cylinder with high timing, a high compression
-			-a carburetor where you can insert your bank card directly into the slot
-			-on EVERY CASE (I have no muhaha) an inner rotor or outer rotor tuning ignition
-			</p>
+
+			<ul>
+				<li>a cylinder with high timing, a high compression</li>
+				<li>a carburetor where you can insert your bank card directly into the slot</li>
+				<li>on EVERY CASE (I have no muhaha) an inner rotor or outer rotor tuning ignition</li>
+			</ul>
 			
 			<p>
 			But okay, you wanted it that way. First you have to do an engine overhaul and have a look what you're dealing with after the last orgies of rpm. If the transmission jams and grumbles when I shift gears, I would change the bearings. With the AM6 a Top shift roller obstruct there otherwise the next 3 metatarsal breaks show when you Moped drove, AM6 transmissions are not soo the racer and shifting can hurt with a strong cylinder.
@@ -259,27 +259,24 @@
 			We would have known each other:
 			</h2>
 			
-			<p>
-			-Metrakit Pro Race 2/3 70 ccm
-			-Metrakit Pro Race XL (self, dome turned out so that it doesn't protrude so far into the cylinder and long stroke shaft 43 mm)
-			-Barikit BRK 88
-			-Top Performance 80, 85, 86, 87 (different bores and strokes)
-			-Airsal X-Treme 88
-			-Malossi MHR Team 80 (overpriced, hands off!)
-			</p>
+			<ul>
+				<li>Metrakit Pro Race 2/3 70 ccm</li>
+				<li>Metrakit Pro Race XL (self, dome turned out so that it doesn't protrude so far into the cylinder and long stroke shaft 43 mm)</li>
+				<li>-Barikit BRK 88</li>
+				<li>Top Performance 80, 85, 86, 87 (different bores and strokes)</li>
+				<li>Airsal X-Treme 88</li>
+				<li>Malossi MHR Team 80 (overpriced, hands off!)</li>
+			</ul>
 			
 			<p>
 			In addition there are different exhaust systems whose suitability should be actually clear:
 			</p>
-			
-			<p>
-			-Metrakit Pro Race 2/3
-			-MVT Racing 80-90 ccm
-			-Barikit BRK 90
-			.
-			.
-			.
-			</p>
+
+			<ul>
+				<li>Metrakit Pro Race 2/3</li>
+				<li>MVT Racing 80-90 ccm</li>
+				<li>Barikit BRK 90</li>
+			</ul>
 			
 			<p>
 			As a carburetor you can reach for a 28-32 mm. The intake system must of course fit again to the connection width of the carburettor.
